src/test/ui/coherence/coherence-pair-covered-uncovered.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-pair-covered-uncovered.rs:8:1
   |
LL | impl<T,U> Remote for Pair<T,Local<U>> { }
   | ^^^^^^^^^^^^^^^^^^^^^----------------
   | |                    |
   | |                    `Pair` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0117`.
